Test Org - Speridian/src/objects/BA_Product_Rate_Flat__c.object
<CustomObject>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Age__c</fullName>
        <label>Age</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ba_CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_LastUpdatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Rates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_LastUpdatedDate__c</fullName>
        <label>Updated Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Package__c</fullName>
        <label>Package</label>
        <referenceTo>BA_Product_Flat__c</referenceTo>
        <relationshipLabel>Product Rates</relationshipLabel>
        <relationshipName>Product_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ba_Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_RatingRegion__c</fullName>
        <label>Rating Region</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_TerminationDate__c</fullName>
        <label>Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_TobaccoUseage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tobacco Usage</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Rates</label>
    <nameField>
        <label>Product Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>